--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <!--<script src="cordova.js"></script>-->
 
     <!-- your app's js -->
+    <script src="js/phaser.2.6.1.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <!--项目共用控制器-->
@@ -26,6 +27,7 @@
     <script src="js/controllers.js"></script>
     <script type="text/javascript" src="js/infoquery.js" ></script>
     <script src="js/mine.js"></script>
+    <script src="js/canvas.directive.js"></script>
   </head>
   <body ng-app="starter" ng-controller="myappCtrl">
     <ion-nav-view></ion-nav-view>
